--- a/404.md
+++ b/404.md
@@ -5,4 +5,4 @@ title: 404 - Page not found
 
 Sorry, we can't find that page that you're looking for. You can try again by going [back to the homepage]({{ site.assets }}/).
 
-[<img src="{{ site.assets }}/images/404.jpg" alt="Constructocat by https://github.com/jasoncostello" style="width: 400px;"/>]({{ site.basaeurl }}/)
+[<img src="{{ site.images }}/404.jpg" alt="Constructocat by https://github.com/jasoncostello" style="width: 400px;"/>]({{ site.basaeurl }}/)
